--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -9,9 +9,32 @@ li {
 }
 ul {
   padding: 0;
+  margin: 0;
+}
+h2 {
+  margin: 0;
 }
 p {
   margin: 0;
+}
+
+.statistics {
+  margin: 0 auto;
+  margin-top: 100px;
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  -webkit-box-shadow: 10px 10px 17px -6px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 17px -6px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 10px 17px -6px rgba(0, 0, 0, 0.75);
+
+  background-color: whitesmoke;
+}
+
+.title {
+  padding: 40px 0;
 }
 
 .statlist {
@@ -28,4 +51,15 @@ p {
 
   width: 80px;
   height: 80px;
+}
+
+.label {
+  color: white;
+  font-size: 14px;
+}
+
+.percentage {
+  color: white;
+  font-size: 18px;
+  font-weight: 600;
 }
